<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_shape"
    android:padding="15dp"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nam_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/primary"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"
        android:background="@drawable/shape"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/primary"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/primary"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/nam_til"
        android:background="@drawable/shape"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/primary"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Phone"
        android:textColorHint="@color/primary"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/email_til"
        android:background="@drawable/shape"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Phone_Edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPhonetic"
            android:padding="5dp"
            android:textColor="@color/primary"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddContact"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_primary_button_bg"
        android:text="@string/Bottom_Add_Contact"
        android:textColor="@color/SecondaryColor"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/phone_til"
        android:layout_marginTop="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>